--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@fortawesome/pro-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
-    "electron": "^6.0.12",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -91,6 +90,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-pro": "^5.10.1",
-    "electron-builder": "^21.2.0"
+    "electron-builder": "^21.2.0",
+    "electron": "^6.0.12"
   }
 }
