Clean up extra files

--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     },
     "files": [
       "./build/**/*",
-      "./node_modules/**/*",
-      "./public/electron.js"
+      "./node_modules/**/*"
     ],
     "directories": {
       "buildResources": "public"
