--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @fortawesome:registry=https://npm.fontawesome.com/
 //npm.fontawesome.com/:_authToken=82268EE0-F946-436B-9580-2DCF0FFEFD7F
+scripts-prepend-node-path=true
