--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/pro-regular-svg-icons": "^5.10.1",
     "@fortawesome/pro-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
