--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "foreman": "^3.0.1",
+    "isemail": "^3.2.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "zxcvbn": "^4.4.2"
   },
   "homepage": "./",
   "main": "src/start.js",
