--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "foreman": "^3.0.1",
+    "isemail": "^3.2.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
