--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-avatar": "^3.9.1",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.0",
