Several fixes for windows

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
       "icon": "./src/images/AppIcon.icns"
     },
     "win": {
-      "target": "NSIS",
+      "target": "NSIS"
     },
     "files": [
       "./build/**/*",
