--- a/package.json
+++ b/package.json
@@ -33,11 +33,10 @@
   "homepage": "./",
   "main": "src/start.js",
   "scripts": {
-    "start": "nf start -p 3000",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "react-start": "react-scripts start"
+    "eject": "react-scripts eject"
   },
   "build": {
     "appId": "app.verse.versedesktopapp",
