Make a few format changes

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,3 +1,4 @@
+#Test and make sure the app builds
 name: Build Test
 
 on:
@@ -26,3 +27,5 @@ jobs:
           cmd: build
         env:
           CI: ""
+
+  
